tests/negative/test_ind_owning_non_ref.orb
data Foo;

fnc dropFoo (val:Foo::noDrop) ();

data Foo {
    x:i32
}::((drop dropFoo));

fnc dropFoo (val:Foo::noDrop) () {};

fnc bar () (Foo 2) {
    sym f:(Foo 2);
    ret (>> f);
};

fnc main () () {
    [] (bar) 0;
};